# benchmark

./: .coderabbit.yaml  .gitignore  CNAME  Cargo.toml  Justfile  QUERY_EXPLANATIONS_AND_SAMPLES.md  codecov.yml  docker-compose.yml  falkordb_csv_loader.py  generate_docker_compose.sh  index.html  prometheus.yml  queries-for-falkordb.txt  queries_tooltip_documentation.md  readme.md  results-dummy.json  syntetic-benchmark.md  synthetic-bench.example.toml  synthetic-benchmark.md  test_queries  todo.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  playwright.yml
benches/: neo4j_simple.rs  synthetic_ops.rs
dashboards/: falkor_dashboard.json  neo4j_dashboard.json  neo4j_vs_falkordb.json  redis_dashboard.json
docs/: synthetic-benchmark-cookbook.md  synthetic-benchmark-tutorial.md
docs/design/: synthetic-cover-ab-query-shapes.md  synthetic-cover-algorithms-phase6.md  synthetic-cover-writes-phase7.md  synthetic-pr-regression-report.md  synthetic-report-per-line-budget-and-tail-latencies.md
docs/synthetic/: sample-console.txt  sample-diff.md  sample-recording-manifest.json  sample-replay-report.json  sample-replay-report.md
github/workflows/: ci.yml
scripts/: check_doc_shell.sh  download-neo4j.sh  run_large_benchmark.sh  run_medium_benchmark.sh  run_small_benchmark.sh
src/: aggregator.rs  cli.rs  compare_template.rs  data_prep.rs  doc_examples.rs  error.rs  falkor.rs  falkor_process.rs  foo.rs  lib.rs  line_stream.rs  main.rs  memgraph.rs  memgraph_client.rs  metrics_collector.rs  neo4j.rs  neo4j_client.rs  neo4j_process.rs  process_monitor.rs  prometheus_endpoint.rs  prometheus_metrics.rs  queries.rs  queries_repository.rs  query.rs  scenario.rs  scheduler.rs  utils.rs
src/falkor/: falkor_driver.rs  falkor_process.rs  telemetry_collector.rs
src/synthetic/: baseline.rs  catalog.rs  config.rs  dataset.rs  diff.rs  engine.rs  host.rs  mod.rs  op_runner.rs  provenance.rs  recording.rs  replay.rs  report.rs  shapes.rs  stats.rs  thresholds.rs  writes.rs
templates/: compare.html
tests/: synthetic_probe.rs
ui/: eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/benchmark/: route.ts
ui/app/aws-tests/: page.tsx
ui/app/components/: BenchmarkMetricsCrawlerTable.tsx  ContactUsSheet.tsx  HardwareInfo.tsx  HorizontalBarChart.tsx  MemoryBarChart.tsx  ResultComponent.tsx  VerticalBarChart.tsx  dashboard.tsx  footer.tsx  header.tsx  metricsComponet.tsx
ui/app/dashboard/: page.tsx
ui/app/data/: sideBarData.ts
ui/app/falkordb-compare/: page.tsx
ui/app/lib/: benchmark-data.server.ts  vendorColors.ts
ui/app/memgraph/: page.tsx
ui/app/neo4j/: page.tsx
ui/app/types/: benchmark.ts
ui/components/ui/: SidebarBrand.tsx  SidebarNavigation.tsx  app-sidebar.tsx  nav-main.tsx  sidebar.tsx  team-switcher.tsx
ui/public/: resultData.json  resutData.json
ui/public/summaries/: aws_tests_falkor_graviton_vs_intel_1767772481.json  falkordb_vs_falkordb.json  falkordb_vs_falkordb_1779774070.json  falkordb_vs_falkordb_1780135046.json  falkordb_vs_falkordb_1780398066.json  falkordb_vs_falkordb_1780399553.json  falkordb_vs_falkordb_1780894469.json  manifest.json  memgraph_vs_falkordb.json  memgraph_vs_falkordb_1765884076.json  memgraph_vs_falkordb_1765902027.json  neo4j_vs_falkordb.json  neo4j_vs_falkordb_1765884076.json  neo4j_vs_falkordb_1765902027.json  neo4j_vs_falkordb_1767361343.json  neo4j_vs_falkordb_1767437441.json  neo4j_vs_falkordb_1767466726.json  neo4j_vs_falkordb_1769529319.json  neo4j_vs_falkordb_1770182690.json  neo4j_vs_falkordb_1770193561.json
ui/tests/config/: testData.ts  urls.json
ui/tests/infra/ui/: browserWrapper.ts
ui/tests/logic/POM/: mainPage.ts
ui/tests/tests/: ci-smoke.spec.ts  footer.spec.ts  header.spec.ts  sideBar.spec.ts
