[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"


description = "A FalkorDB Benchmark"
homepage = "https://www.falkordb.com/"
readme = "readme.md"
repository = "https://github.com/FalkorDB/benchmark"
license = "MIT"
categories = ["database"]
keywords = ["database", "graph-database", "database-driver", "falkordb", "benchmark"]


[dependencies]
neo4rs = "0.8.0"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
rand = "0.8.5"
histogram = { version = "0.11", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12.9", features = ["gzip"] }
async-trait = "0.1.83"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tokio-stream = { version = "0.1.16", features = ["io-util"] }
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
clap_complete = "4.5.36"
nix = { version = "0.29.0", features = ["process", "signal"] }
falkordb = { version = "0.1.6", features = ["tokio"] }
#falkordb = { path = "/Users/barak/dev/falkordb-rs", features = ["tokio"] }
redis = { version = "0.27.5", features = ["tokio-comp"] }
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
askama = "0.12.1"
hostname = "0.4.0"
sysinfo = "0.32.0"
rand_pcg = "0.3.1"

[dev-dependencies]

[profile.release]
opt-level = 3  # This is the default
lto = true     # Enable Link Time Optimization
codegen-units = 1  # Reduce parallel code generation units for better optimization





