[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"


description = "A FalkorDB Benchmark"
homepage = "https://www.falkordb.com/"
readme = "readme.md"
repository = "https://github.com/FalkorDB/benchmark"
license = "MIT"
categories = ["database"]
keywords = ["database", "graph-database", "database-driver", "falkordb", "benchmark"]


[dependencies]
neo4rs = "0.8.0"
thiserror = "1.0.64"
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
rand = "0.8.5"
histogram = { version = "0.11", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["gzip"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tokio-stream = { version = "0.1.16", features = ["io-util"] }
clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
clap_complete = "4.5.36"
nix = { version = "0.29.0", features = ["process", "signal"] }
falkordb = { version = "0.1.9", features = ["tokio"] }
#falkordb = { path = "/Users/barak/dev/falkordb-rs", features = ["tokio", "tracing"] }
redis = { version = "0.27.5", features = ["tokio-comp"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
askama = "0.12.1"
sysinfo = "0.32.0"


tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
prometheus = { version = "0.13.4", features = ["gen"] }
lazy_static = "1.5"
hyper = { version = "0.14.31", features = ["server", "runtime", "http1", "tcp"] }
nonzero = "0.2.0"


[[bin]]
name = "falkor_process"
path = "src/bin/falkor_process_main.rs"

[[bin]]
name = "prepare_queries"
path = "src/bin/prepare_queries_main.rs"

[[bin]]
name = "mpsc"
path = "src/bin/mpsc_main.rs"

[[bin]]
name = "benchmark"
path = "src/main.rs"


[dev-dependencies]

[profile.release]
opt-level = 3  # This is the default
lto = true     # Enable Link Time Optimization
codegen-units = 1  # Reduce parallel code generation units for better optimization





